# big-picture

./: .dockerignore  .gitignore  1.planning.md  2.context.md  3.execution.md  4.quality.md  5.docs.md  Cargo.toml  Cargo.toml.docker  Dockerfile  GODOT_SETUP.md  INTEGRATION_TEST_RESULTS.md  README.md  SERVER_TESTING.md  fly.toml  run_manual_test.sh  test_integration.sh
crates/client/: Cargo.toml
crates/client/src/: lib.rs  lobby_screen.rs  network.rs  welcome_screen.rs
crates/domain/: Cargo.toml
crates/domain/src/: assets.rs  errors.rs  game.rs  lib.rs  player.rs  room.rs  room_manager.rs  types.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
docs/: running-and-deploying.md
godot/: big_picture.gdextension  big_picture.gdextension.uid  project.godot  welcome_screen.gdns
godot/scenes/: lobby_screen.tscn  welcome_screen.tscn
tasks/: lobby-implementation.md
