[workspace]
resolver = "2"
members = [
    "crates/domain",
    "crates/server",
    "crates/client",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Big Picture Team"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# IDs and utilities
uuid = { version = "1.6", features = ["v4", "serde"] }

# Web server
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
tower = "0.4"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Godot bindings (Godot 4.x via GDExtension)
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }

# Complexity tracking
pmat = "2.212"

# Rust-native game engine (optional support library)
jugar = "0.1"
