[package]
name = "big-picture-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
# Workspace dependencies
big-picture-domain = { path = "../domain" }

# Godot bindings (GDExtension for Godot 4.x)
godot.workspace = true

# HTTP client for backend communication
reqwest.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true

# Logging
tracing.workspace = true

[dev-dependencies]
# Test utilities
