[package]
name = "big-picture-domain"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
thiserror.workspace = true
pmat.workspace = true

[dev-dependencies]
# Test utilities
