[package]
name = "big-picture-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
big-picture-domain = { path = "../domain" }

# Web framework
axum.workspace = true
tower-http.workspace = true
tower.workspace = true

# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Optional Rust-native game engine support
jugar.workspace = true

[dev-dependencies]
# Integration test utilities
